# SFML_Game_Project

./: .gitattributes  CMakeLists.txt
fireEmblem/: config.h  config.hpp  main  main.cpp
fireEmblem/Assets/: Background_One.txt
fireEmblem/Assets/Units/Princess/: SavedData.txt
fireEmblem/Camera/: Camera.cpp  Camera.hpp
fireEmblem/Effects/DamageNumbers/: DamageNumbers.cpp  DamageNumbers.hpp
fireEmblem/Entities/Animations/: Animation.cpp  Animation.hpp
fireEmblem/Entities/MapObjects/: Bat.cpp  Bat.hpp  MapObject copy.hpp  MapObject.cpp  MapObject.hpp  Wall.hpp
fireEmblem/Entities/MapObjects/Bat/: Bat.cpp  Bat.hpp
fireEmblem/Entities/MapObjects/Tree/: Tree.cpp  Tree.hpp
fireEmblem/Entities/MapObjects/Wall/: Wall.cpp  Wall.hpp
fireEmblem/Entities/Sprites/: Sprite.cpp  Sprite.hpp
fireEmblem/Entities/Sprites/FireMageSprite/: FireMageSprite.cpp  FireMageSprite.hpp
fireEmblem/Entities/Sprites/SlimeSprite/: SlimeSprite.cpp  SlimeSprite.hpp
fireEmblem/Entities/Sprites/SwordsmanSprite/: SwordsmanSprite.cpp  SwordsmanSprite.hpp
fireEmblem/Entities/Units/: Unit.cpp  Unit.hpp
fireEmblem/Entities/Units/Allies/: Ally.cpp
fireEmblem/Entities/Units/Enemies/: Enemy.cpp  Enemy.hpp
fireEmblem/Entities/Units/Enemies/Slime/: Slime.cpp  Slime.hpp
fireEmblem/Entities/Units/Player/: Player.cpp  Player.hpp
fireEmblem/Entities/Units/Player/FireMage/: FireMage.cpp  FireMage.hpp
fireEmblem/Entities/Units/Player/Swordsman/: Swordsman.cpp  Swordsman.hpp
fireEmblem/Game/: Game.cpp  Game.hpp
fireEmblem/Game/Map_1/: Map_1.cpp  Map_1.hpp
fireEmblem/GridSystem/: GridGenerator.cpp  Tile.cpp
fireEmblem/GridSystem/Algorithms/EnemyPathAlgorithm/: EnemyPathAlgorithm.cpp  EnemyPathAlgorithm.hpp
fireEmblem/GridSystem/Algorithms/GridPathAlgorithm/: GridPathAlgorithm.cpp  GridPathAlgorithm.hpp
fireEmblem/GridSystem/Algorithms/PlayerPathAlgorithm/: PlayerPathAlgorithm.cpp  PlayerPathAlgorithm.hpp
fireEmblem/GridSystem/GridGenerator/: GridGenerator.cpp  GridGenerator.hpp
fireEmblem/GridSystem/GridHandler/: GridHandler.cpp  GridHandler.hpp
fireEmblem/GridSystem/GridMovement/: GridMovement.cpp  GridMovement.hpp
fireEmblem/GridSystem/GridPathAlgorithm/: GridPathAlgorithm.cpp  GridPathAlgorithm.hpp
fireEmblem/GridSystem/Tile/: Tile.cpp  Tile.hpp
fireEmblem/Hitboxes/Attack/: Attack.cpp  Attack.hpp
fireEmblem/Hitboxes/Attack/RangedAttack/: RangedAttack.cpp  RangedAttack.hpp
fireEmblem/Hitboxes/AttackManager/: AttackManager.cpp  AttackManager.hpp
fireEmblem/Hitboxes/Attacks/: Attack.cpp  Attack.hpp
fireEmblem/Hitboxes/Attacks/Attack/: Attack.cpp  Attack.hpp
fireEmblem/Hitboxes/Attacks/AttackManager/: AttackManager.cpp  AttackManager.hpp
fireEmblem/Managers/EnemyManager/: EnemyManager.cpp  EnemyManager.hpp
fireEmblem/Managers/UnitManager/: UnitManager.cpp  UnitManager.hpp
fireEmblem/Maps/: Map.cpp  StartMap.cpp
fireEmblem/Maps/Background/Background1/: Background1.cpp  Background1.hpp
fireEmblem/Maps/Background/BackgroundTiles/: BackgroundTile.cpp  BackgroundTile.hpp
fireEmblem/Maps/EnemyLayouts/Layout/: Layout.hpp  Layoyt.cpp
fireEmblem/Maps/EnemyLayouts/Map1/: Map1.hpp
fireEmblem/Maps/Map/: Map.cpp  Map.hpp
fireEmblem/Maps/MapLayouts/Map/: Map.cpp  Map.hpp
fireEmblem/Maps/MapLayouts/StartMap/: StartMap.cpp  StartMap.hpp
fireEmblem/Maps/StartMap/: StartMap.cpp
fireEmblem/UI/Game/StartMenu/: StartMenu.cpp  StartMenu.hpp
fireEmblem/UI/Game/StartMenu/Button/: Button.cpp  Button.hpp
fireEmblem/UI/Player/Menu/: Menu.cpp  Menu.hpp
fireEmblem/UI/Player/Menu/Skills/: Skills.cpp  Skills.hpp
fireEmblem/UI/Units/Health/: HealthBar.cpp  HealthBar.hpp
fireEmblem/UI/Units/OverView/: OverView.cpp  OverView.hpp
fireEmblem/main.dSYM/Contents/Resources/DWARF/: main
fireEmblem/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
